Fix bug not showing content

--- a/src/index.css
+++ b/src/index.css
@@ -125,7 +125,7 @@ body{
 -------------chapter
 -------------------- */
 
-.chapter{
+.chapter, .content__cards{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 16px;
